--- a/css/theme/simple.css
+++ b/css/theme/simple.css
@@ -265,3 +265,11 @@ body {
  *********************************************/
 .reveal .slide-number {
   color: #00008B; }
+
+.attribution {
+    position:relative;
+    bottom:0;
+    right:0;
+    font-size:0.3em;
+    color: #000000;
+}
